dev/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-web-deployment
  namespace: blog
  labels:
    app: blog-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blog-web
  template:
    metadata:
      labels:
        app: blog-web
    spec:
      containers:
        - name: blog-web
          image: nginx
          ports:
            - containerPort: 80
