dev/service.yml
apiVersion: v1
kind: Service
metadata:
  name: blog-web-service
  labels:
    app: blog-web
  namespace: blog
spec:
  selector:
    app: blog-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
